--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.3.5",
     "@nguniversal/express-engine": "^7.0.2",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
