--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.5",
     "@nguniversal/express-engine": "^7.0.2",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.2",
