--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@nguniversal/express-engine": "^7.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "google-libphonenumber": "^3.2.38",
+    "intl-tel-input": "^17.0.3",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-intl-tel-input": "^3.2.0",
+    "ngx-intl-tel-input-gg": "^1.0.12",
+    "ngx-mat-intl-tel-input": "^5.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
