--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-libphonenumber": "^3.2.38",
     "intl-tel-input": "^17.0.3",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-fx-layout": "^2.0.4",
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-intl-tel-input-gg": "^1.0.12",
     "ngx-mat-intl-tel-input": "^5.0.0",
