--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-mat-intl-tel-input": "^5.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.2",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -46,6 +47,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.20",
+    "browserslist": "^4.23.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
